--- a/src/Compilers/Core/Portable/CodeAnalysisResources.resx
+++ b/src/Compilers/Core/Portable/CodeAnalysisResources.resx
@@ -413,8 +413,8 @@
   <data name="PEImageDoesntContainManagedMetadata" xml:space="preserve">
     <value>PE image doesn't contain managed metadata.</value>
   </data>
-  <data name="ChangesMustBeOrderedAndNotOverlapping" xml:space="preserve">
-    <value>The changes must be ordered and not overlapping.</value>
+  <data name="ChangesMustNotOverlap" xml:space="preserve">
+    <value>The changes must not overlap.</value>
   </data>
   <data name="DiagnosticIdCantBeNullOrWhitespace" xml:space="preserve">
     <value>A DiagnosticDescriptor must have an Id that is neither null nor an empty string nor a string that only contains white space.</value>
