--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5330,4 +5330,7 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="SyntaxTreeNotFound" xml:space="preserve">
     <value>SyntaxTree is not part of the compilation</value>
   </data>
+  <data name="ERR_OutVariableCannotBeByRef" xml:space="preserve">
+    <value>An out variable cannot be declared as a ref local</value>
+  </data>
 </root>
