--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5340,7 +5340,7 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
     <value>An out variable cannot be declared as a ref local</value>
   </data>
   <data name="WRN_InvalidSeverityInAnalyzerConfig" xml:space="preserve">
-    <value>The diagnostic '{0}' was given an invalid severity '{1}' in the analyzer config file in directory '{2}'.</value>
+    <value>The diagnostic '{0}' was given an invalid severity '{1}' in the analyzer config file at '{2}'.</value>
   </data>
   <data name="WRN_InvalidSeverityInAnalyzerConfig_Title" xml:space="preserve">
     <value>Invalid severity in analyzer config file.</value>
