--- a/src/Compilers/VisualBasic/Portable/VBResources.resx
+++ b/src/Compilers/VisualBasic/Portable/VBResources.resx
@@ -5534,7 +5534,7 @@
     <value>interpolated strings</value>
   </data>
   <data name="WRN_InvalidSeverityInAnalyzerConfig" xml:space="preserve">
-    <value>The diagnostic '{0}' was given an invalid severity '{1}' in the analyzer config file in directory '{2}'.</value>
+    <value>The diagnostic '{0}' was given an invalid severity '{1}' in the analyzer config file at '{2}'.</value>
   </data>
   <data name="WRN_InvalidSeverityInAnalyzerConfig_Title" xml:space="preserve">
     <value>Invalid severity in analyzer config file.</value>
